--- a/giphy/src/main/AndroidManifest.xml
+++ b/giphy/src/main/AndroidManifest.xml
@@ -6,7 +6,11 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name=".activities.GiphyActivity"></activity>
+
+        <activity
+            android:name=".activities.GiphyActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+
     </application>
 
 </manifest>
