--- a/giphy/build.gradle
+++ b/giphy/build.gradle
@@ -40,5 +40,15 @@ dependencies {
     compile "com.squareup.retrofit2:adapter-rxjava:2.0.2"
 
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    testCompile 'org.robolectric:robolectric:3.3.2'
+    testCompile 'org.robolectric:shadows-support-v4:3.3.2'
+    testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile('com.squareup.assertj:assertj-android:1.1.1') {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
 }
