--- a/giphy/src/main/AndroidManifest.xml
+++ b/giphy/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:supportsRtl="true">
 
         <activity
-            android:name=".activities.GiphyActivity"
+            android:name=".GiphyActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
 
     </application>
