--- a/giphy/src/main/AndroidManifest.xml
+++ b/giphy/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:supportsRtl="true">
 
         <activity
-            android:name=".GiphyActivity"
+            android:name="com.example.com.muehlemann.giphy.GiphyActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
 
     </application>
