--- a/giphy/build.gradle
+++ b/giphy/build.gradle
@@ -7,7 +7,7 @@ version = "1.0.1"
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 15
