--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,32 @@
+# Built application files
+build/
+build/generated/
+build/intermediates/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Gradle generated files
+.gradle/
+
+# User-specific configurations
+.idea/
 *.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
+
+# OS-specific files
 .DS_Store
-/build
-/captures
-.externalNativeBuild
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+app/*.log
+
+# Captures
+captures/
+
+# Dotenv
+.env
