--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -29,8 +30,8 @@ dependencies {
     compile project(':giphy')
 
     compile 'com.android.support:appcompat-v7:27.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:26.+'
+    compile 'com.android.support.constraint:constraint-layout:1.1.0'
+    compile 'com.android.support:design:27.+'
 
     compile 'com.github.bumptech.glide:glide:4.5.0'
 
